--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ffmpeg>=1.4",
     "ffmpeg-python>=0.2.0",
     "ipykernel>=7.2.0",
+    "moviepy>=1.0.3",
     "pillow>=12.1.1",
     "requests>=2.32.5",
 ]
