feat: enhance database setup with MySQL support and add initial models, migrations, and admin configurations

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,9 @@ pillow
 edge-tts
 requests
 mysqlclient
+
+# Django ecosystem
+djangorestframework
+django-cors-headers
+djangorestframework-simplejwt
+django-filter
